add naver login function

--- a/views/alterfrontpage.ejs
+++ b/views/alterfrontpage.ejs
@@ -57,6 +57,9 @@
             <form method = "GET" action = "/login/registeration">
                  <h3> have no account? <input type = "submit" value = "sign-up"></h3>
             </form>
+            <form method = "GET" action = '/naver_oauth'>
+                <input type = "image" src = "../images/naverlogo.png" height = "50" width = "200">
+            </form>
                 
                 
         </div>
