--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -76,7 +76,7 @@
                                </tr>
                                <!-- 2번쨰 가로는 첫번쨰 그림은 가로로 2칸 세로로 2칸 확장했다. -->
                                <tr>
-                                   <td colspan="2" rowspan="2"><img src = "/images/<%=userInfo.img.url%>" height ="250px" width="200px"></td>
+                                   <td colspan="2" rowspan="2"><img src = "<%=userInfo.img%>" height = "300" width="200"></td>
                                
                                    <td>firstname : </td> <td><%=userInfo.Firstname%></td>
                                 </tr>
@@ -94,6 +94,8 @@
                                     <!-- 마지막 가로는 각각의 버튼이 2개의 가로를 확장했다. -->
                                 <tr>
                                         <td colspan="2"><input type = "image" src = "../images/newedit.png" height = "75px" width = "200px"></td>
+                                        <input type = "hidden" value = "<%=userInfo._id%>" name = "ID">
+                                        <input type = "hidden" value = "<%=userInfo.sns%>" name= "sns">
                                 </form>
                                 <form method ="POST" action= "/main">
                                                         <input type = "hidden" value = "<%=userInfo._id%>" name = "ID">
