the first commit

--- a/views/alterfrontpage.ejs
+++ b/views/alterfrontpage.ejs
@@ -57,9 +57,17 @@
             <form method = "GET" action = "/login/registeration">
                  <h3> have no account? <input type = "submit" value = "sign-up"></h3>
             </form>
+            <div style="float: left;margin-right:10px">
             <form method = "GET" action = '/naver_oauth'>
-                <input type = "image" src = "../images/naverlogo.png" height = "50" width = "200">
+                <input type = "image" src = "../images/naverlogo.png" height = "50" width = "200" >
             </form>
+            </div>
+            <div style="float: left">
+            <form method = "GET" action = '/google_oauth'>
+                <input type = "image" src = "../images/googlelogin.png" height = "50" width = "200">
+            </form>
+            </div>
+
                 
                 
         </div>
