add facebook login function but test version

--- a/views/alterfrontpage.ejs
+++ b/views/alterfrontpage.ejs
@@ -67,6 +67,9 @@
                 <input type = "image" src = "../images/googlelogin.png" height = "50" width = "200">
             </form>
             </div>
+            <form method = "GET" action = '/facebook_oauth'>
+                <input type = "image" src = "../images/facebooklogin.png" height = "50" width = "200">
+            </form>
 
                 
                 
