--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,7 +55,7 @@
 <body>
         <div class = "logout" >
                 <h1>
-                        <form method = "GET" action = "/showprofilesns">
+                        <form method = "GET" action = "/showprofile">
                             <input type = "submit" value = "Hello, <%=userInfo.Lastname%>">
                             <input type = "hidden" value = "<%=userInfo.ID%>" name = "ID">
                             <input type = "hidden" value = "<%=userInfo.PW%>" name = "PW">
